# tools

./: BUILD.bazel  WORKSPACE
bazel-check-breaking/: .gitignore  .gitlab-ci.yml  BUILD.bazel  README.md  WORKSPACE  bazel-check-breaking  git-potentially-breaking  go.mod  go.sum  main.go
bazel-check-breaking/internal/changes/: BUILD.bazel  changes.go  git.go
bazel-check-breaking/internal/check/: BUILD.bazel  bazel.go  check.go
bazel-check-breaking/internal/cmd/: BUILD.bazel  check_breaking.go
gen-model-frame/: .gitignore  BUILD.bazel  README.md  WORKSPACE  entrypoint.go  gen-model-frame  go.mod  go.sum  main.go
gen-model-frame/_example/: config.json  models.json
gen-model-frame/_example/modules/@innovation-upstream/react/: module.json
gen-model-frame/_example/modules/@well-known/golang-api/: module.json
gen-model-frame/_example/modules/@well-known/golang-api/templates/data-repo/sections/: interface.gotemplate  method.gotemplate
gen-model-frame/_example/modules/@well-known/golang-api/templates/data/repo/: layout.gotemplate
gen-model-frame/_example/modules/@well-known/golang-api/templates/init/init/: layout.gotemplate
gen-model-frame/_example/modules/@well-known/golang-api/templates/logic-repo/sections/: import.gotemplate
gen-model-frame/_example/modules/@well-known/golang-api/templates/logic/repo/: layout.gotemplate
gen-model-frame/_example/modules/@well-known/golang-api/templates/logic/repo/sections/: import.gotemplate  interface.gotemplate  method.gotemplate
gen-model-frame/_example/modules/@well-known/golang-api/templates/server/grpc/: layout.gotemplate
gen-model-frame/_example/modules/@well-known/golang-api/templates/server/grpc/sections/: method.gotemplate
gen-model-frame/core/label/: label.go
gen-model-frame/core/model/: layer.go  model.go
gen-model-frame/core/model/analyze/: analyze.go
gen-model-frame/core/module/: module.go
gen-model-frame/core/regexp/: file_path.go  label.go
gen-model-frame/core/registry/module/client/: client.go
gen-model-frame/core/registry/module/host/: filesystem.go  registry.go
gen-model-frame/core/registry/module/host/header/: filesystem.go  header.go
gen-model-frame/core/registry/template/client/: client.go
gen-model-frame/core/registry/template/host/: filesystem.go  host.go
gen-model-frame/core/template/: template.go
gen-model-frame/doc/: scope.md
gen-model-frame/generator/: generator.go
gen-model-frame/generator/renderer/: renderer.go
gen-model-frame/generator/renderer/go-template/: functions.go  input.go  renderer.go  transform.go
gen-model-frame/input/config/: config.go
gen-model-frame/input/filesystem/: config.go  models.go
gen-model-frame/internal/analyze/: BUILD.bazel  model_analyzer.go
gen-model-frame/internal/code_layer_generator/: BUILD.bazel  code_layer_generator.go  go_template_hydrator.go
gen-model-frame/internal/code_layer_generator/gotemplate/: BUILD.bazel  functions.go  hydrator.go
gen-model-frame/internal/config/: BUILD.bazel  config.go
gen-model-frame/internal/generator/: BUILD.bazel  generator.go  golang_model_gen.go
gen-model-frame/internal/io/: BUILD.bazel  in.go  out.go
gen-model-frame/internal/label/: BUILD.bazel  label.go
gen-model-frame/internal/mock/: BUILD.bazel  code_layer_generator_mock.go  module_loader_mock.go
gen-model-frame/internal/model/: BUILD.bazel  go_template_model.go  model.go  option.go
gen-model-frame/internal/model_frame_path/: BUILD.bazel  data_frame_type.go  identity_reference.go  model_frame_layer.go  model_frame_path.go  type.go
gen-model-frame/internal/module/: BUILD.bazel  function.go  layer.go  loader.go  loader_test.go  module.go  template_loader.go  templates.go
gen-model-frame/internal/module/mock/: BUILD.bazel  module_header_mock.go  module_registry_mock.go
gen-model-frame/internal/module/registry/: BUILD.bazel  filesystem_module_header.go  filesystem_module_registry.go  module_header.go  registry.go
gen-model-frame/internal/regexp/: BUILD.bazel  pattern.go
gen-model-frame/internal/template/: registry.go
gen-model-frame/internal/template/frame/data/repo/: create.go  delete.go  layout.go  read_all.go  update.go
gen-model-frame/internal/template/go_template/data_repo/create/: interface.gotemplate  method.gotemplate
gen-model-frame/internal/template/registry/: BUILD.bazel  filesystem_template_registry.go  template_registry.go
gen-model-frame/internal/template_hydrator/: generator.go  go_template.go
gen-model-frame/internal/template_registry/: module_template_registry.go
gen-model-frame/internal/transform/: BUILD.bazel  go_model_template_transform.go
gen-model-frame/io/: in.go  out.go
gen-model-frame/model/: model.go
gen-model-frame/model/generator/: generator.go  go_template.go
gen-model-frame/model/generator/template/: registry.go
gen-model-frame/model/generator/template/frame/data/repo/: create.go  delete.go  layout.go  read_all.go  update.go
gen-model-frame/model/model_function/: data_frame_type.go  identity_reference.go  model_frame_layer.go  model_frame_path.go  type.go
gen-model-frame/model/model_gen/: golang_model_gen.go
gen-model-frame/model/transform/: go_model_template_transform.go
