load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix gitlab.innovationup.stream/innovation-upstream/tools/bazel-check-breaking
# gazelle:go_naming_convention import_alias
# gazelle:go_naming_convention_external go_default_library
gazelle(
    name = "gazelle",
)

go_library(
    name = "bazel-check-breaking_lib",
    srcs = ["main.go"],
    importpath = "gitlab.innovationup.stream/innovation-upstream/tools/bazel-check-breaking",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/cmd",
        "@dev_unknwon_clog_v2//:go_default_library",
    ],
)

go_binary(
    name = "bazel-check-breaking",
    embed = [":bazel-check-breaking_lib"],
    visibility = ["//visibility:public"],
)
