load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/innovation-upstream/tools/gen-model-frame
# gazelle:exclude _example
# gazelle:go_naming_convention go_default_library
gazelle(
    name = "gazelle",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/innovation-upstream/tools/gen-model-frame",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/io:go_default_library",
        "@dev_unknwon_clog_v2//:go_default_library",
    ],
)

go_binary(
    name = "gen-model-frame",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
