load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "changes",
    srcs = [
        "changes.go",
        "git.go",
    ],
    importpath = "gitlab.innovationup.stream/innovation-upstream/tools/bazel-check-breaking/internal/changes",
    visibility = ["//bazel-check-breaking:__subpackages__"],
    deps = ["@com_github_pkg_errors//:go_default_library"],
)

alias(
    name = "go_default_library",
    actual = ":changes",
    visibility = ["//bazel-check-breaking:__subpackages__"],
)
