load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "changes",
    srcs = [
        "changes.go",
        "git.go",
    ],
    importpath = "github.com/innovation-upstream/tools/bazel-check-breaking/internal/changes",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_pkg_errors//:go_default_library"],
)

alias(
    name = "go_default_library",
    actual = ":changes",
    visibility = ["//:__subpackages__"],
)
