load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "check",
    srcs = [
        "bazel.go",
        "check.go",
    ],
    importpath = "gitlab.innovationup.stream/innovation-upstream/tools/bazel-check-breaking/internal/check",
    visibility = ["//bazel-check-breaking:__subpackages__"],
    deps = ["@dev_unknwon_clog_v2//:go_default_library"],
)

alias(
    name = "go_default_library",
    actual = ":check",
    visibility = ["//bazel-check-breaking:__subpackages__"],
)
