load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["code_layer_generator.go"],
    importpath = "gitlab.innovationup.stream/innovation-upstream/tools/gen-model-frame/internal/code_layer_generator",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/label:go_default_library",
        "//internal/model_frame_path:go_default_library",
    ],
)
