load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "gitlab.innovationup.stream/innovation-upstream/tools/gen-model-frame/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/model:go_default_library",
        "//internal/regexp:go_default_library",
        "@com_github_iancoleman_strcase//:go_default_library",
        "@dev_unknwon_clog_v2//:go_default_library",
    ],
)
