load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "code_layer_generator_mock.go",
        "module_loader_mock.go",
    ],
    importpath = "gitlab.innovationup.stream/innovation-upstream/tools/gen-model-frame/internal/mock",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/code_layer_generator:go_default_library",
        "//internal/model_frame_path:go_default_library",
        "//internal/module:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
