load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "go_template_model.go",
        "model.go",
        "option.go",
    ],
    importpath = "gitlab.innovationup.stream/innovation-upstream/tools/gen-model-frame/internal/model",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/model_frame_path:go_default_library"],
)
