load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "identity_reference.go",
        "model_frame_path.go",
    ],
    importpath = "gitlab.innovationup.stream/innovation-upstream/tools/gen-model-frame/internal/model_frame_path",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/label:go_default_library"],
)
