load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "loader.go",
        "module.go",
        "template_loader.go",
        "templates.go",
    ],
    importpath = "gitlab.innovationup.stream/innovation-upstream/tools/gen-model-frame/internal/module",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config:go_default_library",
        "//internal/label:go_default_library",
        "//internal/model_frame_path:go_default_library",
        "//internal/module/registry:go_default_library",
        "//internal/regexp:go_default_library",
        "//internal/template/registry:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["loader_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//internal/module/mock:go_default_library",
        "//internal/module/registry:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
