load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["go_model_template_transform.go"],
    importpath = "gitlab.innovationup.stream/innovation-upstream/tools/gen-model-frame/internal/transform",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/model:go_default_library",
        "//internal/model_frame_path:go_default_library",
        "@com_github_iancoleman_strcase//:go_default_library",
    ],
)
