load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "functions.go",
        "hydrator.go",
    ],
    importpath = "gitlab.innovationup.stream/innovation-upstream/tools/gen-model-frame/internal/code_layer_generator/gotemplate",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/code_layer_generator:go_default_library",
        "//internal/label:go_default_library",
        "//internal/model:go_default_library",
        "//internal/model_frame_path:go_default_library",
        "//internal/module:go_default_library",
        "//internal/transform:go_default_library",
        "@com_github_iancoleman_strcase//:go_default_library",
        "@com_github_masterminds_sprig//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
