load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "filesystem_module_header.go",
        "filesystem_module_registry.go",
        "module_header.go",
        "registry.go",
    ],
    importpath = "gitlab.innovationup.stream/innovation-upstream/tools/gen-model-frame/internal/module/registry",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/label:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
